[gd_scene load_steps=4 format=3 uid="uid://dsfyv485opq0i"]

[ext_resource type="Script" path="res://follow-book-card.gd" id="1_i74q7"]
[ext_resource type="PackedScene" uid="uid://b0t40qwnt2vr2" path="res://mainLabel.tscn" id="2_2qfvr"]
[ext_resource type="PackedScene" uid="uid://baua8dcykafet" path="res://mainButton.tscn" id="4_gqtcg"]

[node name="bookOutputCard" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_i74q7")

[node name="optionsCols" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="titleLbl" parent="optionsCols" instance=ExtResource("2_2qfvr")]
layout_mode = 2
text = "Book Title And Author"

[node name="followBtn" parent="optionsCols" instance=ExtResource("4_gqtcg")]
layout_mode = 2
text = "Follow"

[connection signal="pressed" from="optionsCols/followBtn" to="." method="_on_follow_btn_pressed"]
